# Git_HUB

./: POSEGUARD.txt
AgriCast360/: New Text Document.txt  requirements.txt
AgriCast360/AgriCast360_V1/: Agricast.pbix  Mandi_Ahmedabad.csv  Mandi_Amreli.csv  PowerBI.ipynb
AgriCast360/Old/: Mandi_Surat.csv  Market.xlsx  New Microsoft Word Document.docx  PHASE_2_Feature_Engineering.ipynb  testing.pbix
AgriCast360/POWERBI FILES/: Market_Summary.csv
AgriCast360/Processed_Data/: Analysis_Summary.txt  Feature_Correlations.xlsx  Feature_Importance.csv  Market_Summary.csv  Price_Data_Processed.csv
AgriCast360/Script/: AgriCast360_Dashboard.pbix  Ahmedabad_Chimanbhai_Patal_Market_Vasana_weather_2024-01-01_to_2024-12-31.csv  Amreli_weather_2024-01-01_to_2024-12-31.csv  Babra_weather_2024-01-01_to_2024-12-31.csv  Bagasara_weather_2024-01-01_to_2024-12-31.csv  Bardoli_Katod_weather_2024-01-01_to_2024-12-31.csv  Bardoli_Madhi_weather_2024-01-01_to_2024-12-31.csv  Bardoli_weather_2024-01-01_to_2024-12-31.csv  Bavla_weather_2024-01-01_to_2024-12-31.csv  COMPLETION_SUMMARY.md  Column Description.txt  Dhandhuka_weather_2024-01-01_to_2024-12-31.csv  EDA.ipynb  Market.xlsx  (+35 more)
Nirikhsan_Web_Cam/: Basic+Face.py  Basic+Gesture.py  Basic+HAR.py  Basic+Mediapose - V2.py  Basic+Mediapose.py  Basic+Mediapose.py.backup  Basic+Mediapose_V.py  Basic.py  Basic_camera.ipynb  PRE_TRAINED_FACE.txt  PRE_TRAINER_MODELS.txt  Required_libraries.txt  activity_log.csv  config.json  requirements_complete.txt  verify_improvements.py
PoseGuardCpp/: CMakeLists.txt  c-fi01.txt  main - Copy.cpp  main.cpp
(+136 files in other folders)
